--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.39.1"
     kapt "com.google.dagger:hilt-compiler:2.39.1"
 
+    implementation "io.reactivex.rxjava3:rxjava:3.1.2"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
 }
