--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAdvancedShahrivar00">
         <activity
+            android:name=".TestRxJavaActivity"
+            android:exported="true" >
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
