--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,11 @@
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
-        jcenter() // Warning: this repository is going to shut down soon
         mavenCentral()
         maven {
             url = "https://maven.google.com/"
         }
-
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
         google()
 
 
